home-k8s/apps/open-webui/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: open-webui
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: open-webui
    spec:
      automountServiceAccountToken: false
      hostUsers: false
      containers:
      - name: open-webui
        image: ghcr.io/open-webui/open-webui:main
        securityContext:
          allowPrivilegeEscalation: false
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop:
              - ALL
        ports:
          - containerPort: 8080
            name: http
        volumeMounts:
          - name: open-webui
            mountPath: /app/backend/data
            subPath: app/backend/data
      volumes:
        - name: open-webui
          persistentVolumeClaim:
            claimName: open-webui
