home-k8s/apps/open-webui/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
spec:
  selector:
    app.kubernetes.io/name: open-webui
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: http
